2004-08-26 Alain Magloire

	Do not call computeSources() multiple times.
	* model/org/eclipse/cdt/internal/core/model/CProject.java

2004-08-20 Alain Magloire

	Fix for Bug 69071
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2004-08-09 Bogdan Gheorghe
	Fix for Bug 71115: Double Indexing
	Added CContainer support to updateIndexAdd/RemoveResource
	
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	
2004-07-28 Tanya Wolff

	Fix for PR 70161: Assembly untranslated in C++ File Types
	* plugin.properties
	* plugin.xml

2004-07-26 Alain Magloire

	Fix for PR 70842

	* utils/org/eclipse/cdt/utils/coff/PE.java

2004-07-26 Vladimir Hirsl

	Tracking PR 70820, SOM Binary parser.
	* utils/org/eclipse/cdt/utils/som/SOM.java

2004-07-20 Alain Magloire
	Fix for PR 70449
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java

2004-07-19 Vladimir Hirsl

	Implementation of HP-UX SOM binary parser.
	* utils/org/eclipse/cdt/utils/som/AR.java
	* utils/org/eclipse/cdt/utils/som/SOM.java
	* utils/org/eclipse/cdt/utils/som/parser/ARMember.java
	* utils/org/eclipse/cdt/utils/som/parser/BinaryArchive.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMParser.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMBinaryObject.java

2004-07-17 Brad Jarvinen.

	Fix Pr 70252

	* src/org/eclipse/cdt/internal/errorparsers/GCCErrorParser.java

2004-07-06 Alain Magloire

	Fix PR 69199
	* browser/org/eclipse/cdt/core/browser/TypeInfo.java

2004-07-06 Hoda Amer
	Fix for PR 68933 : [Content Assist] removes asterisks from parameter prompt
	
2004-07-05 Hoda Amer
	Patch for Keith Campbell, a small fix in CConventions.
	
2004-06-29 Alain Magloire

	Possible fix for 68665
	* model/org/eclipse/cdt/internal/core/model/CElementInfo.java

2004-06-29 Alain Magloire

	Fix for PR 68820.
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	
2004-06-28 Bogdan Gheorghe
	Fix for 67656: [Indexer] getting called twice after creating a project with a file system